package com.prj1.ccm.billing.calc;

import java.math.BigDecimal;

public interface ChienLuocGia {
    TienTe thanhTien(BigDecimal soLuong, Integer soNguoiOTrongKy);
}
