package com.prj1.ccm.billing.calc;

public record LyDoBoQua(
        Long phongId,
        MaLyDo ma,
        String moTa
) {
}
